# node-version-manager

./: Cargo.toml  README.md
.github/workflows/: release.yml
locales/: en.toml  vi.toml
src/: app.rs  config.rs  downloader.rs  env_manager.rs  i18n.rs  main.rs  utils.rs  version_service.rs
src/app/: file_ops.rs  mod.rs  storage.rs  ui.rs  version.rs
src/downloader/: mod.rs  unix.rs  windows.rs
src/env_manager/: mod.rs  unix.rs  windows.rs
