[package]
name = "node-version-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
directories = "6.0.0"
eframe = "0.34.2"
egui = "0.34.2"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winreg = "0.56.0"
zip = "8.6.0"
