[package]
name = "node-version-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
directories = "6.0.0"
eframe = "0.34.2"
egui = "0.34.2"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.6.0"
tar = "0.4.45"
flate2 = "1.1.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winreg = "0.56.0"
